fixed line spacing

--- a/src/App.css
+++ b/src/App.css
@@ -258,7 +258,7 @@ a {
   font-family:'Source Sans Pro', sans-serif;
   font-weight:400;
   font-size:30px; 
-  line-height:24px;
+  line-height:28px;
 }
 
 /* Home Section - Title */
